# TAL_SH

./: .gitignore  CMakeLists.txt  COPYING  COPYING.LESSER  LICENSE  Makefile  README.md  TALSH_manual.txt  byte_packet.cpp  byte_packet.h  c_proc_bufs.cu  combinatoric.F90  device_algebra.h  device_algebra.hip.h  dil_basic.F90  dil_tal_cp.F90  dil_tal_nv.cu  dil_tal_nv.hlp  main.F90  main.cu  mem_manager.cpp  mem_manager.cu  mem_manager.h  mem_manager.hip.cpp  nvtx_profile.c  nvtx_profile.h  special.F90  stsubs.F90  symm_index.F90  talsh.h  talsh_complex.h  talsh_complex.hip.h  talsh_task.cpp  talsh_task.hpp  talshc.cpp  talshf.F90  talshxx.cpp  talshxx.hpp  tensor_algebra.F90  tensor_algebra.h  (+15 more)
DOC/: MemManager_manual.txt  TALSH_manual.txt  tensor_algebra_gpu_nvidia.proto.txt  tensor_algebra_gpu_nvidia.txt
cmake/: talsh-config.cmake.in
